<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LaufApp</string>
    <string name="action_settings">Settings</string>
    <string name="text_rundistance">Gelaufene Strecke in km:</string>
    <string name="text_runtime">Benötigte Laufzeit in Minuten:</string>
    <string name="text_pausetime">Pausen in Minuten:</string>
    <string name="text_button_calculator">Pace und Kalorienverbrauch berechnen:</string>
    <string name="text_pace">Durchschnittliche Geschwindigkeit (Pace):</string>
    <string name="text_calories">Verbracuhte Kalorien:</string>
    <string name="text_pace_default">O pro km:</string>
    <string name="text_calories_default">O kCal:</string>


</resources>
