<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pace"/>

    <TextView
        android:id="@+id/textview_pace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pace_default"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_calories"/>

    <TextView
        android:id="@+id/textview_cals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_calories_default"/>

</LinearLayout>